// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource collection DELETE /users should return 200 1`] = `
Array [
  "result",
  "connection",
  "deletedCount",
  "n",
  "opTime",
  "electionId",
  "ok",
  "$clusterTime",
  "operationTime",
]
`;

exports[`Resource collection GET /users should return 200 1`] = `
Object {
  "device": "1a1a836f1cf9087b520148de",
  "email": "john.doe@gmail.com",
  "firstName": "John",
  "lastName": "Doe",
}
`;

exports[`Resource collection GET /users should support query 1`] = `
Object {
  "device": "1a1a836f1cf9087b520148df",
  "email": "alice.garden@gmail.com",
  "firstName": "Alice",
  "lastName": "Garden",
}
`;

exports[`Resource collection PATCH /users should return 200 1`] = `
Object {
  "device": "1a1a836f1cf9087b520148de",
  "email": "john.doe@gmail.com",
  "firstName": "Alex",
  "lastName": "Doe",
}
`;

exports[`Resource collection POST /users should return 400 when payload is invalid 1`] = `
Object {
  "error": "Document failed validation (db.users.insertOne)",
}
`;

exports[`Resource document DELETE /users/:_id should return 200 1`] = `
Array [
  "ok",
  "n",
]
`;

exports[`Resource document DELETE /users/:_id should return 200 2`] = `
Object {
  "n": 1,
  "ok": 1,
}
`;

exports[`Resource document GET /users/:_id should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
  "device",
]
`;

exports[`Resource document GET /users/:_id should return 200 2`] = `
Object {
  "device": "1a1a836f1cf9087b520148de",
  "email": "john.doe@gmail.com",
  "firstName": "John",
  "lastName": "Doe",
}
`;

exports[`Resource document PATCH /users/:_id should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
  "device",
]
`;

exports[`Resource document PATCH /users/:_id should return 200 2`] = `
Object {
  "device": "1a1a836f1cf9087b520148de",
  "email": "john.doe@gmail.com",
  "firstName": "Laura",
  "lastName": "Doe",
}
`;
